# agents-lab

./: CHANGELOG.md  DESIGN.md  README.md  REFACTOR_SUMMARY.md  TASK.md  TASK_PHASE2.md  phase1_task.md  pyproject.toml
docs/blog/: 2026-03-06-agent-collaboration-framework.md
examples/: basic_usage.py  code_review.py  conditional_workflow.py  content_generation.py  human_in_the_loop.py  iteration_workflow.py  workflow_example.py
examples/dev_workflow/: README.md  dev_workflow_v2.py  requirements.txt  test_adapter.py
examples/dev_workflow.backup.20260310_122647/: dev_workflow_acf.py
examples/dev_workflow.backup.20260310_122647/output/: PRD_20260310_004412.md  Spec_20260310_004608.md  code_v1_20260310_004608.py  deploy_20260310_005311.sh  deploy_report_20260310_074500.md  test_cases_20260310_004954.py  test_plan_20260310_004954.md  test_report_20260310_004954.md
examples/dev_workflow/output/: PRD_20260311_114628.md  PRD_20260311_131026.md  PRD_20260311_132000.md  Spec_20260311_131104.md  Spec_20260311_132038.md  (+21 more)
examples/real_agents/: README.md  TASK.md  __init__.py  real_agent_workflow.py  workspace_info.json
examples/real_agents.backup.20260310_122647/: CODE_REVIEW.md
src/acf/: __init__.py
tests/: __init__.py  test_adapter_base.py  test_claude_adapter.py  test_factory.py  test_kimi_adapter.py  test_mock_adapter.py  test_workflow_builder.py  test_workflow_nodes.py  test_workflow_runner.py  test_workflow_state.py
tests/agent/: test_agent_template.py  test_workspace_manager.py
tests/skills/: test_skill_manager.py
tests/store/: test_shared_board.py
(+55 files in other folders)
